Correction shaddow in dark mode

--- a/Accordion/Accordion-01/css/style.css
+++ b/Accordion/Accordion-01/css/style.css
@@ -3,7 +3,8 @@
     --ui-background: #EBE4FF;
     --title-color: #2F265F;
     --text-color: #6550B9;
-    --darkmod-background: #14121F
+    --darkmod-background: #14121F;
+    --shadow-color: rgba(0,0,0,0.25);
 }
 
 .darkmode {
@@ -11,7 +12,8 @@
     --ui-background: #291F43;
     --title-color: #E2DDFE;
     --text-color: #BAA7FF;
-    --darkmod-background: #ffff
+    --darkmod-background: #ffff;
+    --shadow-color: rgba(208, 126, 247, 0.25);
 }
 /*Global*/
 body {
@@ -54,7 +56,7 @@ body {
     background-color: var(--ui-background);
     border-radius: 25px;
     padding-bottom: 40px;
-    box-shadow: 0px 0px 15px 6px rgba(0,0,0,0.25);
+    box-shadow: 0px 0px 15px 6px var(--shadow-color);
 }
 
 /*Btn*/
